# docker-compose-wait

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  entrypoint.sh  release.sh  test.Dockerfile  test.sh  wait.sh
.github/: dependabot.yml_
.github/workflows/: build_and_test.yml  ci.yml  release.yml
example/: README.md  docker-compose.yml
src/: lib.rs  main.rs
src/env_reader/: mod.rs
src/sleeper/: mod.rs
src/tcp/: mod.rs
tests/: integration_test.rs
wait/: Cargo.toml  test.sh
wait/src/: lib.rs  main.rs
wait/src/sleeper/: mod.rs
wait/src/tcp/: mod.rs
wait/tests/: integration_test.rs
waiting/: Cargo.toml  release.sh
waiting/src/: lib.rs  main.rs
waiting/src/env_reader/: mod.rs
waiting/src/tcp/: mod.rs
waiting/tests/: integration_test.rs
