[package]
name = "wait"
version = "2.8.0"
authors = ["ufoscout <ufoscout@gmail.com>"]
edition = "2018"

[dependencies]
port_check = "0.1"
log = "0.4"
env_logger = { version = "0.8", default-features = false }

[dev-dependencies]
atomic-counter = "1.0"
lazy_static = "1.4"
time = "0.2.25"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
