[package]
name = "wait"
version = "2.11.0"
authors = ["ufoscout <ufoscout@gmail.com>"]
edition = "2021"

[dependencies]
port_check = "0.1"
log = "0.4"
env_logger = { version = "0.10", default-features = false }
exec = "0.3.1"
shell-words = "1.1.0"

[dev-dependencies]
atomic-counter = "1.0"
lazy_static = "1.4"
rand = "0.8"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = true
