[package]
name = "wait"
version = "2.12.1"
authors = ["ufoscout <ufoscout@gmail.com>"]
edition = "2021"

[dependencies]
port_check = "0.2"
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }
exec = { version = "0.3.1", default-features = false }
shell-words = { version = "1.1.0", default-features = false }

[dev-dependencies]
atomic-counter = "1.0"
lazy_static = "1.4"
rand = "0.8"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = true
